@@ -1,3 +1,8 @@
+2006-05-08  Miklos Szeredi <miklos@szeredi.hu>
+
+	* lib: search fusermount in installation directory (bindir) as
+	well as in PATH.
+
 2006-05-03  Miklos Szeredi <miklos@szeredi.hu>
 
 	* lib: fix compilation if CLOCK_MONOTONIC is not defined.
